2001-12-20  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (resize_geometry_window):
	fixed wrong size calculation of geometry window

2001-12-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/functions.c (DeferExecution):
	* fvwm/move_resize.c (moveLoop):
	* libs/Target.c (fvwmlib_keyboard_shortcuts):
	* fvwm/misc.c (Keyboard_shortcuts):
	modified keyboard shortcut functions so that it is possible to move
	windows with the keyboard even if the border is hit.  does not work
	very nicely with paging

2001-12-16  Dominik Vogt  <dominik.vogt@gmx.de>

	* configure.in:
	changed version to 2.4.5

2001-12-13  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/borders.c (RedrawTitle):
	* libs/defaults.h (WINDOW_TITLE_OFFSET):
	fixed 'stick' lines with long titles

2001-11-28  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/placement.c (PlaceWindow):
	fixed manual placement on Xinerama screens other than the one with the
	top left corner of the total screen

2001-11-15  olicha  <olivier.chapuis@free.fr>

	* fvwm/bindings.c (activate_binding):
	Fixed immediate application of mouse/stroke bindings

2001-11-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleButtonPress):
	fixed (?) some problem with passing the raise click in ctf to the app

	* fvwm/add_window.c (Reborder):
	* fvwm/virtual.c (MoveViewport):
	(MapDesk):
	(UnmapDesk):
	* fvwm/session.c (SaveWindowStates):
	* fvwm/fvwmdebug.c (DB_WI_WINDOWS):
	don't access stack_next and stack_prev directly but use the access
	functions from stack.h

	* fvwm/stack.c (remove_window_from_stack_ring):
	(add_window_to_stack_ring_after):
	safety patch

	* fvwm/add_window.c (adjust_fvwm_internal_windows):
	(destroy_window):
	when a window becomes scheduled for destruction, remove all traces of it
	from the fvwm internal variable so its not accessed accidentally when
	its fields are no longer valid

2001-10-30  Mikhael Goikhman  <migo@homemail.com>

	* make_fvwmdist.sh: