@@ -4,6 +4,9 @@ Changes in stable release 2.4.5 (not released yet)
 
 * Fixed the size of the geometry window that was broken sometimes.
 
+* Fixed problem with pointer warping to another screen on a dual
+  head setup.
+
 Changes in stable release 2.4.4 (16-Dec-2001)
 
 * Minor title drawing fixes.
